[package]
name = "rustencrypter"
version = "0.1.0"
authors = ["Ayuei <sefton_student@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = { version = "0.3", default-features = false }
rand = {version = "0.7.3"}
aes-gcm = {version = "0.6.0"}
tempfile = "3"
auto_enums = "0.7.5"
walkdir = "2"