[package]
name = "rustencrypter"
version = "0.2.0"
authors = ["Ayuei <sefton_student@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
aes-gcm = { version = "0.10.3", features=["stream", "std"] }
rand = { version = "0.8.5" }
tempfile = "3.9.0"
walkdir = "2.4.0"
thiserror = "1.0.56"
rayon = "1.8.0"
indicatif = { version = "0.17.7", features = ["rayon"] }
dirs = "5.0"
